crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_attrs_with_mustache_values-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 44,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [
                        KeyValue(
                            "attr",
                            Some(
                                JavaScript(
                                    SCRIPT@0..30
                                      WHITESPACE@0..1 " "
                                      EXPR_STMT@1..29
                                        ARROW_EXPR@1..29
                                          PARAMETER_LIST@1..3
                                            L_PAREN@1..2 "("
                                            R_PAREN@2..3 ")"
                                          WHITESPACE@3..4 " "
                                          FAT_ARROW@4..6 "=>"
                                          WHITESPACE@6..7 " "
                                          BLOCK_STMT@7..29
                                            L_CURLY@7..8 "{"
                                            WHITESPACE@8..9 " "
                                            EXPR_STMT@9..27
                                              CALL_EXPR@9..27
                                                DOT_EXPR@9..20
                                                  NAME_REF@9..16
                                                    IDENT@9..16 "console"
                                                  DOT@16..17 "."
                                                  NAME@17..20
                                                    IDENT@17..20 "log"
                                                ARG_LIST@20..27
                                                  L_PAREN@20..21 "("
                                                  NAME_REF@21..26
                                                    IDENT@21..26 "value"
                                                  R_PAREN@26..27 ")"
                                            WHITESPACE@27..28 " "
                                            R_CURLY@28..29 "}"
                                      WHITESPACE@29..30 " "
                                    ,
                                ),
                            ),
                        ),
                    ],
                    children: [],
                },
            ),
        },
    ],
    script: None,
}
