crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_attrs_with_mustache_values.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 19,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [
                        KeyValue(
                            "attr",
                            Some(
                                JavaScript(
                                    SCRIPT@0..5
                                      EXPR_STMT@0..5
                                        NAME_REF@0..5
                                          IDENT@0..5 "value"
                                    ,
                                ),
                            ),
                        ),
                    ],
                    children: [],
                },
            ),
        },
    ],
    script: None,
    css: None,
}
