crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_basic_elements-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 30,
            },
            node_type: Element(
                Element {
                    tag: "tagname",
                    attrs: [],
                    children: [
                        Node {
                            loc: Location {
                                start: 9,
                                end: 20,
                            },
                            node_type: Element(
                                Element {
                                    tag: "p",
                                    attrs: [],
                                    children: [
                                        Node {
                                            loc: Location {
                                                start: 12,
                                                end: 16,
                                            },
                                            node_type: Text(
                                                "inner",
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
    script: None,
}
