crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_basic_elements-3.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 48,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [],
                    children: [
                        Node {
                            loc: Location {
                                start: 19,
                                end: 19,
                            },
                            node_type: Text(
                                "\n",
                            ),
                        },
                        Node {
                            loc: Location {
                                start: 20,
                                end: 31,
                            },
                            node_type: Element(
                                Element {
                                    tag: "p",
                                    attrs: [],
                                    children: [
                                        Node {
                                            loc: Location {
                                                start: 23,
                                                end: 27,
                                            },
                                            node_type: Text(
                                                "hello",
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                        Node {
                            loc: Location {
                                start: 44,
                                end: 44,
                            },
                            node_type: Text(
                                "\n",
                            ),
                        },
                    ],
                },
            ),
        },
        Node {
            loc: Location {
                start: 61,
                end: 61,
            },
            node_type: Text(
                "\n",
            ),
        },
    ],
    script: None,
    css: None,
}
