crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_bindings.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 17,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [
                        Binding(
                            "value",
                        ),
                    ],
                    children: [],
                },
            ),
        },
    ],
    script: None,
}
