crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_comments-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 11,
            },
            node_type: Comment(
                "hello",
            ),
        },
        Node {
            loc: Location {
                start: 12,
                end: 18,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [],
                    children: [],
                },
            ),
        },
    ],
    script: None,
    css: None,
}
