crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_comments-3.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 2,
            },
            node_type: Text(
                "<!-",
            ),
        },
    ],
    script: None,
}
