crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_css-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 36,
                end: 47,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [],
                    children: [
                        Node {
                            loc: Location {
                                start: 39,
                                end: 43,
                            },
                            node_type: Text(
                                "Hello",
                            ),
                        },
                    ],
                },
            ),
        },
    ],
    script: None,
    css: Some(
        "hello { color: red; }",
    ),
}
