crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__can_parse_css.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [],
    script: None,
    css: Some(
        "hello { color: red; }",
    ),
}
